--- a/DbView/src/main/res/menu/fragment_table.xml
+++ b/DbView/src/main/res/menu/fragment_table.xml
@@ -1,9 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="im.dino.dbview.DbViewActivity" >
-    
-    <item android:id="@+id/action_settings"
+    tools:context="im.dino.dbview.DbViewActivity">
+
+    <item
+        android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/ic_action_settings"
+        android:showAsAction="ifRoom" />
 </menu>
