Set white background on activity

--- a/DbView/src/main/res/layout/activity_db_view.xml
+++ b/DbView/src/main/res/layout/activity_db_view.xml
@@ -3,5 +3,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context="im.dino.dbview.DbViewActivity"
     tools:ignore="MergeRootFrame" />
