--- a/dbinspector/src/main/res/menu/dbinspector_fragment_table.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_fragment_table.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title="@string/dbinspector_action_settings"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_action_settings"
+        android:icon="@drawable/ic_action_dbinspector_settings"
         android:showAsAction="ifRoom" />
 </menu>
