--- a/dbinspector/src/main/res/layout/dbinspector_activity.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/dbinspector_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
