Fixed wrong string reference, made gradlew executable

--- a/ExampleApp/src/main/res/menu/main.xml
+++ b/ExampleApp/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     tools:context="im.dino.dbview.exampleapp.MainActivity" >
     
     <item android:id="@+id/action_settings"
-        android:title="@string/dbinspector_action_settings"
+        android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
