--- a/ExampleApp/src/main/res/layout/activity_main.xml
+++ b/ExampleApp/src/main/res/layout/activity_main.xml
@@ -2,15 +2,15 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/dbinspector_activity_horizontal_margin"
+                android:paddingRight="@dimen/dbinspector_activity_horizontal_margin"
+                android:paddingTop="@dimen/dbinspector_activity_vertical_margin"
+                android:paddingBottom="@dimen/dbinspector_activity_vertical_margin"
                 tools:context="im.dino.dbview.exampleapp.MainActivity">
 
-    <Button
+    <TextView
             android:id="@+id/button_show_example_database"
-            android:text="Show example database"
+            android:text="@string/data_created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"/>
