--- a/ExampleApp/src/main/res/menu/main.xml
+++ b/ExampleApp/src/main/res/menu/main.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context="im.dino.dbview.exampleapp.MainActivity">
 
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
-          android:showAsAction="never"/>
+          app:showAsAction="never"/>
 </menu>
