Fixed lint errors

--- a/dbinspector/src/main/res/layout/dbinspector_fragment_table.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_fragment_table.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@android:color/white">
+              tools:context="im.dino.dbinspector.activities.DbInspectorActivity">
 
     <LinearLayout
             android:id="@+id/dbinspector_layout_content_header"
