--- a/dbinspector/src/main/res/menu/dbinspector_fragment_table.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_fragment_table.xml
@@ -4,9 +4,19 @@
       tools:context="im.dino.dbview.DbViewActivity">
 
     <item
+        android:id="@+id/dbinspector_action_search"
+        android:title="@string/dbinspector_action_search"
+        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom"/>
+
+
+    <item
             android:id="@+id/dbinspector_action_settings"
             android:title="@string/dbinspector_action_settings"
             android:orderInCategory="100"
             android:icon="@drawable/dbinspector_ic_action_settings"
             app:showAsAction="ifRoom"/>
+
+
 </menu>
