--- a/dbinspector/src/main/res/values/dbinspector_strings.xml
+++ b/dbinspector/src/main/res/values/dbinspector_strings.xml
@@ -5,6 +5,7 @@
     <string name="dbinspector_structure">Structure</string>
     <string name="dbinspector_content">Content</string>
     <string name="dbinspector_action_settings">Settings</string>
+    <string name="dbinspector_action_delete">Delete</string>
     <string name="dbinspector_action_search">Search</string>
     <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_previous">Previous</string>
@@ -14,8 +15,10 @@
     <string name="dbinspector_databases">Databases</string>
     <string name="dbinspector_foreign_keys">Foreign keys</string>
     <string name="dbinspector_indexes">Indexes</string>
-
+    <string name="dbinspector_available_data_types">Available data types</string>
     <string name="dbinspector_rows_per_page_default">10</string>
+    <string name="dbinspector_add_new_selection">Add new selection</string>
+    <string name="dbinspector_query_fail">SQL query failed</string>
     <string-array name="dbinspector_rows_per_page_options">
         <item>10</item>
         <item>25</item>
@@ -25,4 +28,9 @@
         <item>500</item>
     </string-array>
 
+    <string-array name="dbinspector_crud_allowed_data_types">
+        <item>INTEGER</item>
+        <item>REAL</item>
+        <item>TEXT</item>
+    </string-array>
 </resources>
