--- a/dbinspector/src/main/res/layout/dbinspector_record_row.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_record_row.xml
@@ -10,10 +10,9 @@
         android:layout_height="wrap_content" />
 
     <EditText
-        android:enabled="false"
         android:layout_marginTop="10dp"
         android:id="@+id/dbinspector_column_value"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
