--- a/dbinspector/src/main/res/values/dbinspector_strings.xml
+++ b/dbinspector/src/main/res/values/dbinspector_strings.xml
@@ -6,6 +6,7 @@
     <string name="dbinspector_content">Content</string>
     <string name="dbinspector_action_settings">Settings</string>
     <string name="dbinspector_action_delete">Delete</string>
+    <string name="dbinspector_action_save">Save</string>
     <string name="dbinspector_action_search">Search</string>
     <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_previous">Previous</string>
