--- a/dbinspector/src/main/res/layout/dbinspector_activity.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity.xml
@@ -4,5 +4,5 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
-             tools:context="im.dino.dbinspector.activities.DbInspectorActivity"
+             tools:context="im.dino.dbinspector.activities.DbInspectorSqlActivity"
              tools:ignore="MergeRootFrame"/>
