--- a/dbinspector/src/main/res/layout/dbinspector_search_layout.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_search_layout.xml
@@ -3,21 +3,23 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="@dimen/dbinspector_activity_vertical_margin"
     android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/dbinspector_search_columns"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <Button
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/dbinspector_add_new_selection"
         android:id="@+id/dbinspector_add_new_selection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ListView
+        android:orientation="vertical"
+        android:id="@+id/dbinspector_list_conditions"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp" />
+
 
 </LinearLayout>
