--- a/dbinspector/src/main/res/layout/dbinspector_table_columns.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_table_columns.xml
@@ -10,8 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:drawSelectorOnTop="false"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        />
+        android:scrollbarAlwaysDrawVerticalTrack="true" />
 
 </LinearLayout>
 
