--- a/dbinspector/src/main/res/values/dbinspector_styles.xml
+++ b/dbinspector/src/main/res/values/dbinspector_styles.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <style name="dbinspector_dialog_theme" parent="@android:style/Theme.Dialog">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowIsFloating">false</item>
     </style>
 
 </resources>
