--- a/dbinspector/src/main/res/menu/dbinspector_fragment_table_list.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_fragment_table_list.xml
@@ -17,10 +17,18 @@
             android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
             app:showAsAction="ifRoom"/>
 
+
+    <item
+            android:id="@+id/dbinspector_action_share"
+            android:title="@string/dbinspector_action_share"
+            android:orderInCategory="102"
+            android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
+            app:showAsAction="ifRoom"/>
+
     <item
             android:id="@+id/dbinspector_action_import"
             android:title="@string/dbinspector_action_import"
-            android:orderInCategory="102"
+            android:orderInCategory="103"
             android:icon="@drawable/dbinspector_file_upload"
             app:showAsAction="ifRoom"/>
 </menu>
