--- a/dbinspector/src/main/res/values/dbinspector_strings.xml
+++ b/dbinspector/src/main/res/values/dbinspector_strings.xml
@@ -5,6 +5,7 @@
     <string name="dbinspector_structure">Structure</string>
     <string name="dbinspector_content">Content</string>
     <string name="dbinspector_action_settings">Settings</string>
+    <string name="dbinspector_action_clear_table">Clear Table</string>
     <string name="dbinspector_action_search">Search</string>
     <string name="dbinspector_action_copy">Copy</string>
     <string name="dbinspector_action_share">Share</string>
