--- a/dbinspector/src/main/res/menu/dbinspector_fragment_table_list.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_fragment_table_list.xml
@@ -8,7 +8,7 @@
             android:title="@string/dbinspector_action_search"
             android:orderInCategory="100"
             app:actionViewClass="android.support.v7.widget.SearchView"
-            android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+            android:icon="@android:drawable/ic_menu_search"
             app:showAsAction="collapseActionView|always"/>
 
     <item
