--- a/dbinspector/src/main/res/layout/dbinspector_list_item_search_dialog.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_list_item_search_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="?listPreferredItemHeight"
+              android:layout_height="?listPreferredItemHeightSmall"
               android:background="@android:color/white"
               android:gravity="center_vertical"
               android:orientation="horizontal">
@@ -20,7 +20,6 @@
         android:id="@+id/dbinspector_field_condition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
 
     <EditText
         android:id="@+id/dbinspector_field_value"
