--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -21,7 +21,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
@@ -32,12 +32,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:scrollbars="vertical|horizontal" />
+            android:scrollbars="vertical|horizontal">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </HorizontalScrollView>
 
     </LinearLayout>
 
