Fix header view

--- a/dbinspector/src/main/res/values-night/colors.xml
+++ b/dbinspector/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="dbinspector_header_background">#2a2a2a</color>
     <color name="dbinspector_alternate_row_background">#353535</color>
 </resources>
