--- a/dbinspector/src/main/res/layout/dbinspector_item_header.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_header.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
     android:orientation="horizontal"
+    android:background="@color/dbinspector_header_background"
     android:padding="4dp">
 
     <com.google.android.material.textview.MaterialTextView
@@ -12,6 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center_vertical"
+        android:maxWidth="150dp"
+        android:minHeight="40dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
         android:textStyle="bold" />
 
 </LinearLayout>
