--- a/dbinspector/src/main/res/values/colors.xml
+++ b/dbinspector/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="dbinspector_color_primary">#0f80cc</color>
     <color name="dbinspector_color_primary_dark">#003b57</color>
 
+    <color name="dbinspector_header_background">#bbbbbb</color>
     <color name="dbinspector_alternate_row_background">#F2F2F2</color>
 </resources>
