--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -15,6 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/dbinspector_table"
             app:navigationIcon="@drawable/dbinspector_ic_close"
             app:title="@string/dbinspector_table" />
 
