--- a/dbinspector/src/main/res/layout/dbinspector_item_database.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_database.xml
@@ -68,6 +68,7 @@
             tools:text="/data/user/0/im.dino.dbinspector.example/databases" />
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginTop="16dp"
