--- a/dbinspector/src/main/res/menu/dbinspector_table.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_table.xml
@@ -4,6 +4,12 @@
     tools:ignore="AlwaysShowAction">
 
     <item
+        android:id="@+id/pragma"
+        android:icon="@drawable/dbinspector_ic_pragma"
+        android:title="@string/dbinspector_pragma"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/clear"
         android:icon="@drawable/dbinspector_ic_remove"
         android:title="@string/dbinspector_action_clear"
