Fix navigation icon from leaf screens

--- a/dbinspector/src/main/res/layout/dbinspector_activity_pragma.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_pragma.xml
@@ -15,9 +15,9 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            app:title="@string/dbinspector_pragma"
             android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/dbinspector_ic_close" />
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            app:title="@string/dbinspector_pragma" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
