--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/dbinspector_table"
-            app:navigationIcon="@drawable/dbinspector_ic_close"
+            app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/dbinspector_table" />
 
     </com.google.android.material.appbar.AppBarLayout>
