--- a/ExampleApp/src/main/res/layout/activity_main.xml
+++ b/ExampleApp/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:id="@+id/show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show" />
+            android:text="Run" />
 
     </LinearLayout>
 
