--- a/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
@@ -2,8 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent" >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/dbinspector_menu"
+            app:menu="@menu/dbinspector_database"
             app:navigationIcon="@drawable/dbinspector_ic_close"
             app:subtitle="@string/dbinspector_databases"
             app:title="@string/dbinspector_name" />
