--- a/dbinspector/src/main/res/layout/dbinspector_activity_pragma.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_pragma.xml
@@ -16,6 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/dbinspector_pragma"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/dbinspector_pragma" />
 
