--- a/dbinspector/src/main/res/menu/dbinspector_pragma.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_pragma.xml
@@ -4,9 +4,9 @@
     tools:ignore="AlwaysShowAction">
 
     <item
-        android:id="@+id/dbImport"
-        android:icon="@drawable/dbinspector_ic_import"
-        android:title="@string/dbinspector_action_import"
+        android:id="@+id/refresh"
+        android:icon="@drawable/dbinspector_ic_refresh"
+        android:title="@string/dbinspector_action_refresh"
         app:showAsAction="always" />
 
 </menu>
