--- a/dbinspector/src/main/res/menu/dbinspector_table.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_table.xml
@@ -4,15 +4,21 @@
     tools:ignore="AlwaysShowAction">
 
     <item
+        android:id="@+id/clear"
+        android:icon="@drawable/dbinspector_ic_clear"
+        android:title="@string/dbinspector_action_clear"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/pragma"
         android:icon="@drawable/dbinspector_ic_pragma"
         android:title="@string/dbinspector_pragma"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/clear"
-        android:icon="@drawable/dbinspector_ic_remove"
-        android:title="@string/dbinspector_action_clear"
+        android:id="@+id/refresh"
+        android:icon="@drawable/dbinspector_ic_refresh"
+        android:title="@string/dbinspector_action_refresh"
         app:showAsAction="always" />
 
 </menu>
