Add search database list

--- a/dbinspector/src/main/res/menu/dbinspector_database.xml
+++ b/dbinspector/src/main/res/menu/dbinspector_database.xml
@@ -4,6 +4,12 @@
     tools:ignore="AlwaysShowAction">
 
     <item
+        android:id="@+id/search"
+        android:title="@string/dbinspector_action_search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/dbImport"
         android:icon="@drawable/dbinspector_ic_import"
         android:title="@string/dbinspector_action_import"
