--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/dbinspector_table"
+            app:menu="@menu/dbinspector_content"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/dbinspector_table" />
 
