--- a/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_content.xml
@@ -35,12 +35,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                app:fastScrollEnabled="true"
-                app:fastScrollHorizontalThumbDrawable="@drawable/dbinspector_selector_fastscroll_thumb"
-                app:fastScrollHorizontalTrackDrawable="@drawable/dbinspector_selector_fastscroll_line"
-                app:fastScrollVerticalThumbDrawable="@drawable/dbinspector_selector_fastscroll_thumb"
-                app:fastScrollVerticalTrackDrawable="@drawable/dbinspector_selector_fastscroll_line" />
+                android:scrollbars="vertical" />
 
         </HorizontalScrollView>
 
